--- a/main.html
+++ b/main.html
@@ -8,8 +8,47 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
+
+	<h1>Myntra Size Chart</h1>
+    <table>
+        <thead>
+            <tr style="background-color: rgb(192, 80, 78); color: white;">
+                <th>Part</th>
+                <th>XS</th>
+                <th>S</th>
+                <th>M</th>
+                <th>L</th>
+                <th>XL</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr style="background-color: rgb(218, 150, 149); color: white;">
+                <td class="row1">Waist</td>
+                <td>25</td>
+                <td>28</td>
+                <td>30</td>
+                <td>31</td>
+                <td>32</td>
+            </tr>
+            <tr style="background-color: rgb(241, 220, 219);">
+                <td class="row1">Chest</td>
+                <td>34</td>
+                <td>34</td>
+                <td>38</td>
+                <td>40</td>
+                <td>41</td>
+            </tr>
+            <tr style="background-color: rgb(217, 217, 217);">
+                <td class="row1">Sleeve</td>
+                <td>23</td>
+                <td>24</td>
+                <td>24</td>
+                <td>25</td>
+                <td>25</td>
+            </tr>
+        </tbody>
+    </table>
 
 </body>
 
